Update and rename hair-transplant-fue-fut-neograft-new-york-city.html to hair-transplant-fue-fut-neograft-brooklyn.html

--- a/hair-transplant-fue-fut-neograft-brooklyn.html
+++ b/hair-transplant-fue-fut-neograft-brooklyn.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-new-york-city.html" />
-<title>Hair Transplant | Cost | FUE, FUT, Neograft, Artas, New York City</title>
-<meta name="Description" content="Best Hair Transplant Center, FUE & FUT Technology, Neograft, Artas, Best Cost & Price, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
-<meta name="Keywords" content="Best Hair Transplant, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
+<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-brooklyn.html" />
+<title>Hair Transplant | Cost | FUE, FUT, Neograft, Artas, Brooklyn</title>
+<meta name="Description" content="FUE Hair Transplant in Brooklyn: Restore Your Hairline & Boost Confidence! Unique treament, tailored to you. Book a free consultation at StudioMD in Brooklyn."/>
+<meta name="Keywords" content="Best Hair Transplant Brooklyn, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -243,7 +243,6 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div style="position: relative; top: 15%; right: 5%;  font-weight: 200; color: black; text-align: right">
 <span style="font-size: 5vmax">HAIR<br> TRANSPLANT<br />EXPERTS</span><br><br>
 <span style="font-size: 2.5vmax;"> LEADING SINCE 2008</span><br><br>
-<span style="font-size: 2.5vmax;">BEST FUE TECHNOLOGY</span><br><br>
 <span style="font-size: 2.5vmax;">MARCH-MAY</span><span style="font-size: 2.5vmax; color: crimson; text-decoration: line-through"> $1500 </span><span style="font-size: 2.5vmax;">OFF</span>
 </div></div></div></div></div>
 
@@ -361,20 +360,15 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
 <br>
-<span style="font-size: 4vh; font-weight: 300">ONE HAPPY PATIENT</span><br>
+<span style="font-size: 4vh; font-weight: 300">GET THE HAIR YOU DREAM ABOUT WITH FUE</span><br>
 <br>
 </div></div></div>
 
 <div class="lbm-row">
 <div class="lbm-col-wrapper">
 <div class="lbm-column width-50 lbm-no-pad"><br><br><br><br>
-<span style="position: relative; left: 12%; font-family: 'doppio-one'; font-size: 4vmax; color: white; background-color:rgba(160,136,111,1.00); font-weight: 900; text-align: left">  &nbsp;1,100 Grafts </span><br><br>
-<span style="position: relative; left: 2%; font-family: 'doppio-one'; font-size: 4vmax; color: #69503F; background-color: white; font-weight: 900; text-align: left">12 MONTHS</span><br><br>
-<span style="position: relative; left: 25%; font-family: 'doppio-one'; font-size: 4vmax; color: white;  background-color:rgba(160,136,111,1.00); font-weight: 900; text-align: left">  &nbsp;$4,500 TOTAL </span><br><br><br>
 <div class="line" style="margin-left: 10%; margin-right: 10%"></div><br />
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> NO VISIBLE SCAR</div>
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> MINIMALLY INVASIVE</div>
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> FAST RECOVERY</div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Your Hair Is An Integral Part Of Your Identity And Your Self-esteem.</div>
 </div>
 <div class="lbm-column width-50 lbm-no-pad">
 <img src="images2020/backbanners/hair_transplant_banner2.jpg" alt="hair transplant fue nyc" style="max-width: 100%">
@@ -384,9 +378,6 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-row backgroundvafasection">
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
-<br>
-<span style="font-size: 3vh">BOOK NOW TO TAKE ADVANTAGE OF WINTER PROMOTION:<br>
-<span style="background-color: black; color: white; font-family: 'pontano-sans'"> &nbsp&nbsp  $1,500 OFF SPRING GIFT &nbsp&nbsp </span> </span><br><br>
 <img src="images2020/hair-treatments-studiomd_optimized.jpg" style="max-width: 80%" width="550px" alt="StudioMD Hair Loss Solutions"/> </div></div></div>
 
 
@@ -444,68 +435,53 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES HAIR TRANSPLANT WORK?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD, we utilize the most advanced techniques and technology for hair transplant.  The way hair transplant works is the hair grafts from a donor area, typically in the back of the head, are extracted with precision and replanted to the forehead area where hair is thinning.  The donor areas of the head contain hair that are not prone to hair loss, whereas the front is where hair loss typically occurs. With hair transplant, the lost hair in the front is replaced with healthy hair from the back of the head.</span>
+<div class="accordion"><span itemprop="name">WHAT IS A FOLLICULAR UNIT EXTRACTION (FUE) TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE is a type of minimally invasive outpatient hair transplant, in which follicular unit grafts are individually removed from stronger areas of your scalp and then carefully restored on your thinning areas. The goal is to recreate your hairline and growth pattern for a permanent, natural-looking result. And since there are no linear scars and no stitches, your scalp will likely heal within just a few days.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS FUE HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Folliculer Unit Extraction (FUE) is a hair transplant method which entails etracting grafts one at a time from the donor site. Grafts are picked individually and extracted less contiguosly.   This is in contrast to the Follicular Unit Transplantation (FUT) method where a strip of hair is removed from the donor site, leaving a scar over the gap resulting from the removal.<br />* Results may vary</span></div></div>
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HAIR TRANSPLANT COST OR HOW MUCH IS A HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Hair transplant cost, for the FUE method utilized at StudioMD, start at around $2000 per procedure. The price of the hair transplant procedure is deteminned by the number of grafts transplanted in the hair transplant procedure.  The price per graft is typically in the $4 to $5 range at our New York City locations.</span>
+<div class="accordion"><span itemprop="name">DOES FUE TRANSPLANT LOOK NATURAL?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">One of many great things about the FUE method is that the extracted hair follicles are then reinserted using special sub-millimeter techniques. With that, the procedure requires an artistic touch as surgeons must consider hair depth, angulation, direction, and density to provide a look as natural and realistic as possible.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">CAN I SEE HAIR TRANSPLANT BEFORE AND AFTER PHOTOS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">This before and after photos depicts the full hair transplant cycle and the healing process. After the hair transplant procedure, transplanted hair will be visible in a couple of weeks and is expected to grow within 5 months.   
-	<a href="images2020/before after/hair-transplant-before-after-photos.jpg">You can find more before and after images, as well as videos for our hair transplant procedures at this link.</a><br>
-* Results may vary</span>
+<div class="accordion"><span itemprop="name">DOES FUE ALWAYS LEAVE SCARS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE scars take place mostly on the back of your head and appear as small dots which fade over time. These dots will be hidden as your hair regrowths and won't be noticeable even if you shave your head in the future.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DO HAIR TRANSPLANTS WORK?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Hair transplant is a procedure that has been a proven and effective treatment for replacing lost hair.  Hair transplant is gaining popularity each day ,with more men and women opting for treatment to replace lost hair with FUE hair transplant method. <br />
-* Results may vary</span>
-</div></div>
-
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW IS A HAIR TRANSPLANT PERFORMED?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The hair transplant procedure entail removing hair grafts from the back side of the head, where hair density is generally much more than the top, and then planting those healthy follicles to the front of the head.  The hair transplant procedure is conducted under local anasthesia, meaining the back of the head (i.e. the donor site) is numbed with an injection first. After the hair grafts are extracted from the back, then the the receiving site is numbed with an injection. Once the hair is planted in the receiving site, both aras are dressed and covered.   The dressings are removed within 48 hours.<br />
-* Results may vary</span>
-</div></div>
-
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT ARE THE BENEFITS OF A FUE TRANSPLANT PERFORMED?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE Hair Translplant is a superior method compared to other hair transplant methods. One of the key benefits of FUE hair transplant is that the hair is extracted more sporadically from the donor site and does not necessitate cutting a strip of the scalp out as the FUT method requires.   In the FUE method, each hair graft is extracted out individually, with sufficient spaceing between grafts, and therefore FUE results in no or minimal scarring. <br />
-* Results may vary</span>
-</div></div>
-
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHICH ONE IS BETTER, FUE OR FUT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE Hair Translplant has a number of advantages over FUT.  FUE hair transplant is substantially free of bleeding, scarring, stitches, sutures, and is minimally invasive.  In contrast, FUT hair transplant requires carving off a strip of the scalp from the donor area, followed by stiching that area closed therefore causing bleeding and a line of scar.  FUE hair transplant is more preferrable over FUT for these reasons.<br />
-* Results may vary</span>
-</div></div>
-
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT AREAS CAN BE TREATED WITH FUE HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The following areas are the most common areas addressed with hair transplant . <br /><br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="new york city hair transplant men" /> Front upper forehea for men<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="new york city hair transplant men" /> Front top for men<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="new york city hair transplant men" /> Front sides for women<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="new york city hair transplant women" /> Front central top for women <br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="new york city hair transplant women" /> Areas suffering from hair loss or thinning after pregnancy for women <br /><br />
-* Results may vary</span>
+<div class="accordion"><span itemprop="name">DO YOU HAVE TO BE BALD FOR A HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">No, FUE is a solution for combating any form of male pattern baldness - a pattern of hair loss that generally affects the temples and crown, leaving men and women with hair around the back and sides of the head, but nowhere else. Nevertheless, not everyone is a good candidate for FUE treatment. Factors such as the extent of hair loss and hair type will determine the most appropriate transplant method.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHO PERFORMS THE HAIR TRANSPLANT PROCEDURES?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Our team of hair transplant specialists lead by Dr. Vafa performs our hair transplant procedures.  Our team collectively has years of experience in hair transplant surgery and our choice of technology and FUE method has been tested for more than a decade, with thousands of successful results. Our team also uses the Neograft technology which is the most advanced device utilized in FUE. Dr Vafa is a board certified physician specializing in Cosmetic Medicine, Constructive Procedures, Hair Transplant Laser Procedures, Radio-Wave Surgery and Smartlipo . Dr. Vafa performs <strong>thousands of aesthetics procedures yearly</strong></span>
+<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE TO HEAL FROM FUE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Since FUE incisions are very small, they will likely heal completely within a few days following the extraction. Around 3 months after the procedure, you should begin to notice new hair growth. After six months you should be able to notice more significant hair regrowth and from this point on your transplanted hair will continue to grow naturally.</span>
+</div></div>
+
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">WHAT IS THE HAIR GROWTH TIMELINE AFTER AN FUE PROCEDURE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Transplanted hair usually falls after 3 weeks and it is natural for it to happen. It'll grow back after 3 months as the other strands are born, day-to-day. Within 6-9 months it will be possible to notice a considerable change, but the final result will take up to a year and a half.</span>
+</div></div>
+
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">HOW LONG DOES A HAIR TRANSPLANT LAST?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">When the hair transplant takes place, the hair follicles are harvested for the process and designed to keep growing, therefore an FUE transplant can last a lifetime. But results are affected by the patient's age, hair type, and lifestyle. The extent of hair loss can also affect the lifespan of your hair transplant, and in some cases, may require more than one procedure throughout your lifetime to achieve and upkeep the desired result.</span>
+</div></div>
+
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">IS FUE SURGERY PAINFUL?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Follicular Unit Extraction is conducted using local anesthesia which means that after initial injections to numb the scalp, the procedure should not be painful at all.</span>
+</div></div>
+
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">HOW MUCH IS AN FUE HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The final cost of an FUE procedure depends on the amount of hair that is extracted and transplanted. But, as a reference, costs start at $2500, based on graft count. At StudioMD Brooklyn you can find financing options as low as $99/month.</span>
+</div></div>
+	
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A HAIR TRANSPLANT IN BROOKLYN?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we understand the emotions associated with hair loss and the fear many people experience when considering hair transplant procedures. But you don’t have to endure hair loss. With an FUE treatment, you can regain your confidence and enjoy your hair as you envision it. Wait no longer and book an appointment today!</span>
 </div></div>
 
 </div>
