Update and rename hair-transplant-fue-fut-neograft-brooklyn.html to hair-transplant-fue-fut-neograft-long-island.html

--- a/hair-transplant-fue-fut-neograft-long-island.html
+++ b/hair-transplant-fue-fut-neograft-long-island.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-brooklyn.html" />
-<title>Hair Transplant | Cost | FUE, FUT, Neograft, Artas, Brooklyn</title>
-<meta name="Description" content="FUE Hair Transplant in Brooklyn: Restore Your Hairline & Boost Confidence! Unique treament, tailored to you. Book a free consultation at StudioMD in Brooklyn."/>
-<meta name="Keywords" content="Best Hair Transplant Brooklyn, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
+<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-long-island.html" />
+<title>Best FUE Hair Transplant Long Island | StudioMD</title>
+<meta name="Description" content="Replace lost hair with FUE hair transplant procedure. Bring your natural hair back with a simple procedure. Book a free consultation at StudioMD in Long Island."/>
+<meta name="Keywords" content="Best Hair Transplant Long Island, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas, Long Island"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -360,7 +360,7 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
 <br>
-<span style="font-size: 4vh; font-weight: 300">GET THE HAIR YOU DREAM ABOUT WITH FUE</span><br>
+<span style="font-size: 4vh; font-weight: 300">ONE HAPPY PATIENT</span><br>
 <br>
 </div></div></div>
 
@@ -368,7 +368,9 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper">
 <div class="lbm-column width-50 lbm-no-pad"><br><br><br><br>
 <div class="line" style="margin-left: 10%; margin-right: 10%"></div><br />
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Your Hair Is An Integral Part Of Your Identity And Your Self-esteem.</div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">SUTURE-FREE & PAINLESS <br /></div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">HAIR TRANSPLANT PROCEDURE <br /></div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">WITHOUT COMPROMISING RESULTS!<br /></div>
 </div>
 <div class="lbm-column width-50 lbm-no-pad">
 <img src="images2020/backbanners/hair_transplant_banner2.jpg" alt="hair transplant fue nyc" style="max-width: 100%">
@@ -435,53 +437,54 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS A FOLLICULAR UNIT EXTRACTION (FUE) TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE is a type of minimally invasive outpatient hair transplant, in which follicular unit grafts are individually removed from stronger areas of your scalp and then carefully restored on your thinning areas. The goal is to recreate your hairline and growth pattern for a permanent, natural-looking result. And since there are no linear scars and no stitches, your scalp will likely heal within just a few days.</span>
+<div class="accordion"><span itemprop="name">WHAT IS AN FUE HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE (Follicular Unit Excision) is a form of hair transplant surgery in which individual hair follicles are extracted from the back and sides of your head and are then transplanted to a part of the scalp that suffers from thinning or balding. FUE procedures have increased in popularity over the years due to the outstanding results achieved and shorter recovery time when compared to traditional transplants.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES FUE TRANSPLANT LOOK NATURAL?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">One of many great things about the FUE method is that the extracted hair follicles are then reinserted using special sub-millimeter techniques. With that, the procedure requires an artistic touch as surgeons must consider hair depth, angulation, direction, and density to provide a look as natural and realistic as possible.</span>
+<div class="accordion"><span itemprop="name">DO TRANSPLANTED HAIR THIN?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">In the FUE method, since the follicles have been taken from an area of hair unaffected by pattern baldness, the new hairs are also unaffected and will not be subject to the same patterns of loss, being as resilient as they were in the donor area. Nevertheless, the transplanted hair may also thin over time, just like normal hair, but it won't be as intense as before.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES FUE ALWAYS LEAVE SCARS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE scars take place mostly on the back of your head and appear as small dots which fade over time. These dots will be hidden as your hair regrowths and won't be noticeable even if you shave your head in the future.</span>
+<div class="accordion"><span itemprop="name">DOES FUE HAIR TRANSPLANT LEAVE SCARS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The donor area in your scalp - where the hair follicles have been extracted from - will be left with dot-like scars less than a millimeter in diameter. These scars cannot be seen once the hair has grown to a grade 1 or 2.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DO YOU HAVE TO BE BALD FOR A HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">No, FUE is a solution for combating any form of male pattern baldness - a pattern of hair loss that generally affects the temples and crown, leaving men and women with hair around the back and sides of the head, but nowhere else. Nevertheless, not everyone is a good candidate for FUE treatment. Factors such as the extent of hair loss and hair type will determine the most appropriate transplant method.</span>
+<div class="accordion"><span itemprop="name">WHAT AGE IS BEST FOR A HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Technically there is no “right” or “wrong” age for a transplant. The grafting process performed in FUE depends on the severity of the hair loss and the patient's facial features, and those can vary greatly in patients of all ages.
+</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE TO HEAL FROM FUE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Since FUE incisions are very small, they will likely heal completely within a few days following the extraction. Around 3 months after the procedure, you should begin to notice new hair growth. After six months you should be able to notice more significant hair regrowth and from this point on your transplanted hair will continue to grow naturally.</span>
+<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE TO RECOVER FROM FUE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Recovery from your FUE transplant takes from 3 to 5 days and even though there are no stitches, you will be left with several tiny little scabs all over your head. Healing is usually faster and less painful if compared to other techniques like linear strip harvesting.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS THE HAIR GROWTH TIMELINE AFTER AN FUE PROCEDURE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Transplanted hair usually falls after 3 weeks and it is natural for it to happen. It'll grow back after 3 months as the other strands are born, day-to-day. Within 6-9 months it will be possible to notice a considerable change, but the final result will take up to a year and a half.</span>
+<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE FOR FUE HAIR TO GROW?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Within the first 3 months, the newly implanted hair will shed before growing again. Between 4 up to 12 months, is when the full results will be shown.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES A HAIR TRANSPLANT LAST?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">When the hair transplant takes place, the hair follicles are harvested for the process and designed to keep growing, therefore an FUE transplant can last a lifetime. But results are affected by the patient's age, hair type, and lifestyle. The extent of hair loss can also affect the lifespan of your hair transplant, and in some cases, may require more than one procedure throughout your lifetime to achieve and upkeep the desired result.</span>
+<div class="accordion"><span itemprop="name">IS FUE HAIR TRANSPLANT PERMANENT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The donor area, from which hair follicles are extracted are not genetically programmed to drop out, so these hair grafts are considered “safe zones”. So it's firmly established that FUE hair transplant results are permanent.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS FUE SURGERY PAINFUL?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Follicular Unit Extraction is conducted using local anesthesia which means that after initial injections to numb the scalp, the procedure should not be painful at all.</span>
+<div class="accordion"><span itemprop="name">DOES FUE HAIR TRANSPLANT HURT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE hair transplant is usually tolerable for most patients. At the beginning of the procedure, a local anesthetic is applied to your scalp and it can be slightly uncomfortable. But from then onwards, you won't experience any pain and will merely feel the pressure of the instruments on your scalp.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW MUCH IS AN FUE HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The final cost of an FUE procedure depends on the amount of hair that is extracted and transplanted. But, as a reference, costs start at $2500, based on graft count. At StudioMD Brooklyn you can find financing options as low as $99/month.</span>
+<div class="accordion"><span itemprop="name">IS FUE EXPENSIVE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The price for an FUE hair transplant can vary depending on a variety of factors, from the extent of your hair loss to the desired density of your FUE hair transplant. Overall, costs are around $2500 and up, based on graft count.</span>
 </div></div>
 	
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A HAIR TRANSPLANT IN BROOKLYN?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we understand the emotions associated with hair loss and the fear many people experience when considering hair transplant procedures. But you don’t have to endure hair loss. With an FUE treatment, you can regain your confidence and enjoy your hair as you envision it. Wait no longer and book an appointment today!</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A HAIR TRANSPLANT IN LONG ISLAND?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Long Island, our physicians are highly skilled in the process of natural graft placement, where your hairline is recreated in keeping with their original hair growth pattern to give them a natural-looking result. If you are interested in a state-of-the-art outcome, with long-lasting results, book an appointment, and let's work together towards your hair goals.</span>
 </div></div>
 
 </div>
