--- a/hair-transplant-fue-fut-neograft-white-plains.html
+++ b/hair-transplant-fue-fut-neograft-white-plains.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-brooklyn.html" />
-<title>Hair Transplant | Cost | FUE, FUT, Neograft, Artas, Brooklyn</title>
-<meta name="Description" content="FUE Hair Transplant in Brooklyn: Restore Your Hairline & Boost Confidence! Unique treament, tailored to you. Book a free consultation at StudioMD in Brooklyn."/>
-<meta name="Keywords" content="Best Hair Transplant Brooklyn, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
+<link rel="canonical" href="https://www.thestudiomd.com/hair-transplant-fue-fut-neograft-white-plains.html" />
+<title>Best FUE Hair Transplant Westchester | StudioMD White Plains</title>
+<meta name="Description" content="Restore your hairline & boost confidence with a FUE hair transplant. Natural-looking and long-lasting results. Book a free consultation at StudioMD White Plains."/>
+<meta name="Keywords" content="Best Hair Transplant Westchester, Greenwich, Stamford, Scarsdale, White Plains, hair transplant cost, hair transplant before and after, fue hair transplant, how much is hair transplant, how does FUE FUT hair transplant work, Neograft, Artas."/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -360,7 +360,7 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
 <br>
-<span style="font-size: 4vh; font-weight: 300">GET THE HAIR YOU DREAM ABOUT WITH FUE</span><br>
+<span style="font-size: 4vh; font-weight: 300">WITH FUE HAIR TRANSPLANT YOU CAN EXPECT:</span><br>
 <br>
 </div></div></div>
 
@@ -368,7 +368,10 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper">
 <div class="lbm-column width-50 lbm-no-pad"><br><br><br><br>
 <div class="line" style="margin-left: 10%; margin-right: 10%"></div><br />
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Your Hair Is An Integral Part Of Your Identity And Your Self-esteem.</div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Natural-looking and long-lasting results;<br></div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Minimally invasive state-of-the-art technique;<br></div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Day case surgery; <br></div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> Fast recovery: return to work the next day!<br></div>
 </div>
 <div class="lbm-column width-50 lbm-no-pad">
 <img src="images2020/backbanners/hair_transplant_banner2.jpg" alt="hair transplant fue nyc" style="max-width: 100%">
@@ -435,53 +438,53 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS A FOLLICULAR UNIT EXTRACTION (FUE) TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE is a type of minimally invasive outpatient hair transplant, in which follicular unit grafts are individually removed from stronger areas of your scalp and then carefully restored on your thinning areas. The goal is to recreate your hairline and growth pattern for a permanent, natural-looking result. And since there are no linear scars and no stitches, your scalp will likely heal within just a few days.</span>
+<div class="accordion"><span itemprop="name">WHAT IS FUE IN HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE technique is a method of hair transplantation in which hair follicles are extracted from a donor area - more commonly the back of the head, but also arms, legs, and chest - and then implanted one by one into an area suffering from baldness, to create a new richer and fuller hairline. One of the main reasons for the success of FUE hair transplantation is its natural appearance, made possible by the detailed and single hair graft transfer process.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES FUE TRANSPLANT LOOK NATURAL?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">One of many great things about the FUE method is that the extracted hair follicles are then reinserted using special sub-millimeter techniques. With that, the procedure requires an artistic touch as surgeons must consider hair depth, angulation, direction, and density to provide a look as natural and realistic as possible.</span>
+<div class="accordion"><span itemprop="name">WHAT'S THE DIFFERENCE BETWEEN FUT AND FUE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUT stands for Follicular Unit Transplantation, in which a surgeon removes a strip of hair from a healthier region of hair growth in your scalp (donor area), to implant the follicles in the area targeted for treatment. On the other hand, FUE does not use “strip harvesting” but extracts single follicular units directly from the donor area in a less invasive form, typically leading to minimal scarring that is often barely noticeable afterward.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES FUE ALWAYS LEAVE SCARS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">FUE scars take place mostly on the back of your head and appear as small dots which fade over time. These dots will be hidden as your hair regrowths and won't be noticeable even if you shave your head in the future.</span>
+<div class="accordion"><span itemprop="name">DO SCARS GO AWAY AFTER A HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">One of the best advantages of the FUE procedure is that it minimizes the risk of scarring. After surgery, you'll be left with several tiny scars that remain so small (less than 1 mm) that they can hardly be seen with the naked eye.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DO YOU HAVE TO BE BALD FOR A HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">No, FUE is a solution for combating any form of male pattern baldness - a pattern of hair loss that generally affects the temples and crown, leaving men and women with hair around the back and sides of the head, but nowhere else. Nevertheless, not everyone is a good candidate for FUE treatment. Factors such as the extent of hair loss and hair type will determine the most appropriate transplant method.</span>
+<div class="accordion"><span itemprop="name">WHAT IS THE IDEAL AGE FOR A HAIR TRANSPLANT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">After the age of 25, FUE Hair Transplants can be performed on patients of any age. As long as the donor area is in good condition and healthy hair follicles can be harvested, the transplant can go ahead. Also, there is no maximum age limit on getting a transplant.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE TO HEAL FROM FUE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Since FUE incisions are very small, they will likely heal completely within a few days following the extraction. Around 3 months after the procedure, you should begin to notice new hair growth. After six months you should be able to notice more significant hair regrowth and from this point on your transplanted hair will continue to grow naturally.</span>
+<div class="accordion"><span itemprop="name">HOW MANY DAYS DOES THE SWELLING LAST AFTER FUE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Swelling after a hair transplant is considered to be a normal post-surgery occurrence, but the timeline depends on many factors. Most patients experience it for 2 or 3 days after the procedure. The use of cold compresses, medications, and following the recommended sleeping techniques can help to reduce the discomfort and the swelling itself.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS THE HAIR GROWTH TIMELINE AFTER AN FUE PROCEDURE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Transplanted hair usually falls after 3 weeks and it is natural for it to happen. It'll grow back after 3 months as the other strands are born, day-to-day. Within 6-9 months it will be possible to notice a considerable change, but the final result will take up to a year and a half.</span>
+<div class="accordion"><span itemprop="name">HOW MANY MONTHS AFTER HAIR TRANSPLANT DO YOU SEE RESULTS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You will be able to see the new contour of your hairline immediately following your FUE procedure. But, since there is a recovery process involved with hair transplants, it can take up to 12 months for you to truly see the final results.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES A HAIR TRANSPLANT LAST?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">When the hair transplant takes place, the hair follicles are harvested for the process and designed to keep growing, therefore an FUE transplant can last a lifetime. But results are affected by the patient's age, hair type, and lifestyle. The extent of hair loss can also affect the lifespan of your hair transplant, and in some cases, may require more than one procedure throughout your lifetime to achieve and upkeep the desired result.</span>
+<div class="accordion"><span itemprop="name">HOW LONG DOES FUE LAST?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">As hair is taken from a healthy donor area that does not suffer from the underlying hair loss process, FUE hair transplants should last for 20 years and potentially a lifetime.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS FUE SURGERY PAINFUL?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Follicular Unit Extraction is conducted using local anesthesia which means that after initial injections to numb the scalp, the procedure should not be painful at all.</span>
+<div class="accordion"><span itemprop="name">ARE FUE SESSIONS PAINFUL?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You may experience some discomfort when injecting the anesthetic. But after it has gone in your system shouldn’t feel any pain at all. The FUE technique uses very small needles to minimize the pain of the injections. And if the pain does develop, your surgeon can always top up the anesthetic to ease your suffering.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW MUCH IS AN FUE HAIR TRANSPLANT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The final cost of an FUE procedure depends on the amount of hair that is extracted and transplanted. But, as a reference, costs start at $2500, based on graft count. At StudioMD Brooklyn you can find financing options as low as $99/month.</span>
+<div class="accordion"><span itemprop="name">HOW MUCH DOES FUE COST?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Several factors go into determining the final cost since there is no one-size-fits-all approach when it comes to hair transplants. As a reference, FUE hair transplant costs are around $2500 and up, depending on the number of grafts involved in each surgery.</span>
 </div></div>
 	
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A HAIR TRANSPLANT IN BROOKLYN?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we understand the emotions associated with hair loss and the fear many people experience when considering hair transplant procedures. But you don’t have to endure hair loss. With an FUE treatment, you can regain your confidence and enjoy your hair as you envision it. Wait no longer and book an appointment today!</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A HAIR TRANSPLANT IN WHITE PLAINS / GREENWICH / WESTCHESTER?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD White Plains we focus on satisfying patient expectations and prioritizing their needs concerning quality and perfection. Our experience has shown that FUE offers natural, successful, and aesthetically pleasing results. If you would like to know more about FUE, book an appointment, and let's work together towards your hair goals.</span>
 </div></div>
 
 </div>
